# routes/accounts.js
@@ -1,10 +1,12 @@
 const router = require("express").Router()
 const accountController = require("../controllers/accountCont")
+const { validateAccount, validateUpdateAccount } = require("../middleware/validateAccount")
+const handleError = require("../middleware/handleErrors")
 
-router.get("/", accountController.getAll)
-router.get("/:id", accountController.getSingle)
-router.post("/", accountController.createAccount)
-router.put("/", accountController.updateAccount)
-router.delete("/", accountController.deleteAccount)
+router.get("/", handleError(accountController.getAll))
+router.get("/:id", handleError(accountController.getSingle))
+router.post("/", validateAccount, handleError(accountController.createAccount))
+router.put("/:id", validateUpdateAccount, handleError(accountController.updateAccount))
+router.delete("/:id", handleError(accountController.deleteAccount))
 
 module.exports = router
